--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
     <meta name="description" content="Spécialiste du web design, La Panthère est une agence basée à Lyon,
 	qui accompagne les entreprises et des particuliers pour la création de sites Internet attractifs,
 	basé sur la stratégie commerciale du client et sur l'élaboration d'illustrations uniques.">
@@ -83,7 +82,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label>
 							Nom
