--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
 	<meta name="description" content="Spécialiste du web design, La Panthère est une agence basée à Lyon,
 	qui accompagne les entreprises et des particuliers pour la création de sites Internet attractifs,
 	basé sur la stratégie commerciale du client et sur l'élaboration d'illustrations uniques.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
+	<link rel="stylesheet" type="text/css" href="./css/styles.pure.css">
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
