--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="htpps://instagram.com"><span
+									<a class="social" href="https://instagram.com"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
