--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence de web design à Lyon" height="40" /></a>
+				<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence de web design à Lyon" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -131,22 +131,22 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center width-responsive-mobile">
 							<a class="social social-link" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span>Twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center width-responsive-mobile">
 							<a class="social social-link" href="https://facebook.com"><span class="fa fa-facebook icon-md"></span>Facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center width-responsive-mobile">
 							<a class="social social-link" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span>Dribbble</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center width-responsive-mobile">
 							<a class="social social-link" href="https://instagram.com"><span class="fa fa-instagram icon-md"></span>Instagram</a>
 						</div>
 					</div>
