--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
+						<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="La Panthère agence de web design à Lyon" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -55,7 +55,7 @@
 							<li>
 							</li>
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="contact.html" id="contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -75,10 +75,10 @@
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
 						</h1>
-						<div class="text-center">
+						<!--<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
@@ -161,8 +161,8 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+							<!-- <a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>-->
 						</p>
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="contact.html"
+						<a href="#contact"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
@@ -265,22 +265,22 @@
 						</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
-								<div class="text-center">
+								<div class="text-center width-responsive-mobile">
 									<a class="social social-link" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span>Twitter</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="text-center">
+								<div class="text-center width-responsive-mobile">
 									<a class="social social-link" href="https://facebook.com"><span class="fa fa-facebook icon-md"></span>Facebook</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="text-center">
+								<div class="text-center width-responsive-mobile">
 									<a class="social social-link" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span>Dribbble</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="text-center">
+								<div class="text-center width-responsive-mobile">
 									<a class="social social-link" href="https://instagram.com"><span
 											class="fa fa-instagram icon-md"></span>Instagram</a>
 								</div>
