--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="La Panthère agence de web design à Lyon" height="40" /></a>
+						<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
+								alt="La Panthère agence de web design à Lyon" height="40" /></div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
