--- a/index.html
+++ b/index.html
@@ -70,15 +70,11 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100"
 							alt="Agence de web design La Panthère basée à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
 						</h1>
-						<!--<div class="text-center">
-							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a>
-						</div>-->
 					</div>
 				</div>
 			</div>
@@ -136,7 +132,7 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<p class="citation">"L’agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer
-							l’essence de notre entreprise et à l’intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.
+							l’essence de notre entreprise et à l’intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
 						</p>
 						<p class="citation-author">Maxime Guibard, PDG de À vos fourchettes</p>
 					</div>
@@ -162,7 +158,6 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-							<!-- <a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>-->
 						</p>
 					</div>
 				</div>
@@ -182,9 +177,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
+								src="img/1.webp"
 								alt="Refonte d'un site web pour un journal local par l'agence La Panthère"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -195,9 +190,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
+								src="img/2.webp" class="img-responsive portfolio-thumb"
 								alt="Création d'un site web pour photographes par l'agence La Panthère" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -209,9 +204,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.jpg" class="img-responsive portfolio-thumb"
+								src="img/3.webp" class="img-responsive portfolio-thumb"
 								alt="Création d'un site web pour voyageurs par l'agence La Panthère" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -222,9 +217,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.jpg" class="img-responsive portfolio-thumb"
+								src="img/4.webp" class="img-responsive portfolio-thumb"
 								alt="Création d'un site web pour agence de mariage par l'agence La Panthère" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
