--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="La Panthère agence de web design à Lyon" height="40" /></div>
+								alt="La Panthère agence de web design à Lyon" height="40" width="217"/></div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -70,7 +70,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.webp" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100"
 							alt="Agence de web design La Panthère basée à Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
@@ -181,7 +181,8 @@
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.webp"
 								alt="Refonte d'un site web pour un journal local par l'agence La Panthère"
-								class="img-responsive portfolio-thumb" /></a>
+								class="img-responsive portfolio-thumb"
+								width="270" height="270"/></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -193,7 +194,8 @@
 						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.webp" class="img-responsive portfolio-thumb"
-								alt="Création d'un site web pour photographes par l'agence La Panthère" /></a>
+								alt="Création d'un site web pour photographes par l'agence La Panthère"
+								width="270" height="270"/></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -207,7 +209,8 @@
 						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.webp" class="img-responsive portfolio-thumb"
-								alt="Création d'un site web pour voyageurs par l'agence La Panthère" /></a>
+								alt="Création d'un site web pour voyageurs par l'agence La Panthère"
+								width="270" height="270"/></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -220,7 +223,8 @@
 						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.webp" class="img-responsive portfolio-thumb"
-								alt="Création d'un site web pour agence de mariage par l'agence La Panthère" /></a>
+								alt="Création d'un site web pour agence de mariage par l'agence La Panthère"
+								width="270" height="270"/></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
