--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence de web design à Lyon" height="40" /></div>
+				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence de web design à Lyon" width="217" height="40" /></div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
