HTML : rectifications pour améliorer le responsive mobile

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
-					<div class="navbar-header">
+					<div class="navbar-header" id="contact">
 						<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="La Panthère agence de web design à Lyon" height="40" width="217"/></div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -53,9 +53,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<li>
-								<a href="contact.html" id="contact">Contact</a>
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
