--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-	<script defer src="./js/jquery-2.1.0.min.js"></script>
-	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
@@ -34,17 +34,24 @@
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
+
 		<nav class="navbar row">
-			<div class="navbar-header">
-				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence de web design à Lyon" width="217" height="40" /></div>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+			<div class="navbar-header" id="contact">
+				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg"
+						alt="La Panthère agence de web design à Lyon" height="40" width="217"/></div>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+					data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+						class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
