--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/styles.pure.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/styles.pure.css"> -->
+
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 	<script defer src="./js/jquery-2.1.0.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
@@ -67,7 +72,7 @@
 					<div class="col-sm-12">
 						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100"
 							alt="Agence de web design La Panthère basée à Lyon" />
-						<h1 class="text-center hero-bloc-text tc-white ">
+						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
 					</div>
