--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,8 @@
 	basé sur la stratégie commerciale du client et sur l'élaboration d'illustrations uniques.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
-	<!-- <link rel="stylesheet" type="text/css" href="./css/styles.pure.css"> -->
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.pure.css">
 	
 	<script defer src="./js/jquery-2.1.0.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
