--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/styles.pure.css">
 
-	<script defer src="./js/jquery-2.1.0.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+	<!-- <script defer src="./js/jquery-2.1.0.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.js"></script>
 	<script defer src="./js/jquery.touchSwipe.js"></script>
-	<script defer src="./js/gmaps.js"></script>
+	<script defer src="./js/gmaps.js"></script> -->
 
 	<title>La Panthère - Agence de web design à Lyon</title>
 
@@ -287,6 +289,9 @@
 
 	</div>
 	<!-- Principal conteneur END -->
+
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 </body>
 
