--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
-							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+							<img
 								src="img/1.webp"
 								alt="Refonte d'un site web pour un journal local par l'agence La Panthère"
 								class="img-responsive portfolio-thumb"
